# fido-cx

./: .gitignore  Cargo.toml  README.md  pint.cx  request.json  response.json
src/: bench.rs  main.rs  test.rs
src/authenticator/: error.rs  inner.rs  mod.rs  pin.rs
src/authenticator/crypto/: agility.rs  mod.rs
src/authenticator/protocol/: archive.rs  credential.rs  file.rs  hpke_format.rs  mod.rs  request.rs  response.rs
src/crypto/: agility.rs  mod.rs
src/protocol/: archive.rs  credential.rs  mod.rs  request.rs  response.rs
