[package]
name = "fido-cx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.1"
colored = "3.0.0"
dialoguer = "0.11.0"
flate2 = "1.0.35"
rand = "0.8.5"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"

[dependencies.hpke]
version = "0.12.0"
features = ["p256", "p384", "p521", "x25519"]
